// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SharedDepositLoanRow should match snapshot when appetite and pricing are shared 1`] = `
.c0 {
  border-top: 1px solid #c0cfde;
  padding: 20px 0;
}

.c0:last-child {
  border-bottom: 1px solid #c0cfde;
}

.c0.c0 .column:not(.grid) {
  padding-bottom: 10px;
}

.c1 display:inline-block span {
  vertical-align: middle;
}

.c1 svg {
  margin-right: 10px;
  width: 14px;
  height: 14px;
  vertical-align: middle;
}

<div
  className="c0"
>
  <div
    className="ui stackable grid"
    colums={2}
  >
    <div
      className="three wide column"
    >
      <p>
        <b
          data-test-id="counterparty-name-cc24a24b-ada5-4332-9ee7-394da255df67"
        >
          Company Name
        </b>
      </p>
      <p>
        <small
          className="grey"
          data-test-id="last-updated-cc24a24b-ada5-4332-9ee7-394da255df67"
        >
          Updated on 
          2019/01/01
        </small>
      </p>
    </div>
    <div
      className="thirteen wide column"
    >
      <div
        className="ui stackable grid"
      >
        <div
          className="three column row"
        >
          <div
            className="column"
            data-test-id="appetite-cc24a24b-ada5-4332-9ee7-394da255df67"
          >
            <div
              className="c1"
            >
              <svg
                data-test-id="shared-icon"
              >
                check-green.svg
              </svg>
              <span
                data-test-id="appetite-label"
                style={Object {}}
              >
                Appetite
              </span>
            </div>
          </div>
          <div
            className="column"
            data-test-id="appetite-cc24a24b-ada5-4332-9ee7-394da255df67"
          >
            <div
              className="c1"
            >
              <svg
                data-test-id="shared-icon"
              >
                check-green.svg
              </svg>
              <span
                data-test-id="pricing-per-annum-label"
                style={Object {}}
              >
                Pricing per annum
                <span>
                   - 
                  0.90 %
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SharedDepositLoanRow should match snapshot when appetite is shared but pricing is not shared 1`] = `
.c0 {
  border-top: 1px solid #c0cfde;
  padding: 20px 0;
}

.c0:last-child {
  border-bottom: 1px solid #c0cfde;
}

.c0.c0 .column:not(.grid) {
  padding-bottom: 10px;
}

.c1 display:inline-block span {
  vertical-align: middle;
}

.c1 svg {
  margin-right: 10px;
  width: 14px;
  height: 14px;
  vertical-align: middle;
}

<div
  className="c0"
>
  <div
    className="ui stackable grid"
    colums={2}
  >
    <div
      className="three wide column"
    >
      <p>
        <b
          data-test-id="counterparty-name-cc24a24b-ada5-4332-9ee7-394da255df67"
        >
          Company Name
        </b>
      </p>
      <p>
        <small
          className="grey"
          data-test-id="last-updated-cc24a24b-ada5-4332-9ee7-394da255df67"
        >
          Updated on 
          2019/01/01
        </small>
      </p>
    </div>
    <div
      className="thirteen wide column"
    >
      <div
        className="ui stackable grid"
      >
        <div
          className="three column row"
        >
          <div
            className="column"
            data-test-id="appetite-cc24a24b-ada5-4332-9ee7-394da255df67"
          >
            <div
              className="c1"
            >
              <svg
                data-test-id="shared-icon"
              >
                check-green.svg
              </svg>
              <span
                data-test-id="appetite-label"
                style={Object {}}
              >
                Appetite
              </span>
            </div>
          </div>
          <div
            className="column"
            data-test-id="appetite-cc24a24b-ada5-4332-9ee7-394da255df67"
          >
            <div
              className="c1"
            >
              <svg
                data-test-id="not-shared-icon"
              >
                close.svg
              </svg>
              <span
                data-test-id="pricing-per-annum-label"
                style={
                  Object {
                    "color": "#5d768f",
                  }
                }
              >
                Pricing per annum
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
